kubernetes/apps/default/referencegrant.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-networking-security-policy
spec:
  from:
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: networking
  to:
    - group: ""
      kind: Service
